Fix coreIPC fuzz blocker: NetworkStorageManager::didGenerateIndexKeyForRecord https://bugs.webkit.org/show_bug.cgi?id=294375 rdar://152492569

Reviewed by Sihui Liu.

Check whether key type of WebCore::IDBResourceIdentifier is empty before
attempting to use it to retrieve a value from a HashMap.

* LayoutTests/ipc/networkstoragemanager-didgenerateindexkeyforrecord-notransactionid-expected.txt: Added.
* LayoutTests/ipc/networkstoragemanager-didgenerateindexkeyforrecord-notransactionid.html: Added.
* Source/WebKit/NetworkProcess/storage/IDBStorageRegistry.cpp:
(WebKit::IDBStorageRegistry::transaction):

Canonical link: https://commits.webkit.org/296198@main